[workspace]
members = ["celeste", "celeste-tray", "libceleste"]

[workspace.dependencies]
celeste-tray.path = "celeste-tray"
libceleste.path = "libceleste"

adw = { package = "libadwaita", version = "0.5.3", features = ["v1_2"] }
base64 = "0.21.4"
blocking = "1.3.1"
clap = { version = "4.4.4", features = ["derive", "env"] }
dirs = "5.0.1"
exitcode = "1.1.2"
file-lock = "2.1.10"
glib = "0.18.2"
glob = "0.3.1"
grass = "0.13.1"
gtk3 = { package = "gtk", version = "0.18" }
hw-msg = "0.4.1"
indexmap = "2.0.0"
futures = "0.3.28"
lazy_static = "1.4.0"
libappindicator = "0.8.0"
librclone = { version = "0.5.0" }
nipper = "0.1.9"
nix = "0.27.1"
quit = "2.0.0"
rand = "0.8.5"
regex = "1.9.5"
rocket = "0.5.0-rc.3"
sea-orm = { version = "0.12.3", features = ["sqlx-sqlite", "runtime-async-std-rustls", "macros"] }
sea-orm-migration = "0.12.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tempfile = "3.8.0"
tera = "1.19.1"
time = { version = "0.3.29", features = ["serde-well-known"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "sync"] }
toml_edit = { version = "0.20.0", features = ["serde"] }
tr = "0.1.7"
url = "2.4.1"
users = "0.11.0"
zbus = "3.14.1"
